Fix media block spacings

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2057,6 +2057,10 @@ table {
 .site-footer > .site-footer__inner-container > div:last-child {
   margin-top: 0; }
 
+.site-footer .wp-block-group.is-style-default {
+  padding-top: var(--wp-block-group-padding);
+  padding-bottom: var(--wp-block-group-padding); }
+
 /* Post Content */
 .entry-header {
   padding-right: var(--theme-wrapper-sides-spacing);
